Fix icon links wrapping around

--- a/site/styles.css
+++ b/site/styles.css
@@ -140,9 +140,16 @@ time.post-date {
 }
 
 .icon-links {
-    display: block;
+    display: flex;
+
+    flex-wrap: wrap;
+    justify-content: center;
+
     text-align: center;
-    margin: 3rem 0 3rem 0;
+
+    > span {
+        margin: 0.5rem 1.5rem 0.5rem 1.5rem;
+    }
 
     a {
         text-decoration: none;
